--- a/BuildYourVocabulary/View/Base.lproj/Main.storyboard
+++ b/BuildYourVocabulary/View/Base.lproj/Main.storyboard
@@ -90,18 +90,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Oxp-B4-0T4">
-                                <rect key="frame" x="0.0" y="140" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="sCm-yw-Jkc">
+                                <rect key="frame" x="0.0" y="140" width="414" height="722"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="sectionIndexColor" systemColor="labelColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="Oxp-B4-0T4">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="dtv-IB-V9B" style="IBUITableViewCellStyleDefault" id="mdX-er-r6f">
+                                        <rect key="frame" x="0.0" y="95.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mdX-er-r6f" id="seJ-ur-H9G">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dtv-IB-V9B">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Z07-Qx-jYY"/>
                         <color key="backgroundColor" systemColor="systemRedColor"/>
+                        <constraints>
+                            <constraint firstItem="sCm-yw-Jkc" firstAttribute="trailing" secondItem="Z07-Qx-jYY" secondAttribute="trailing" id="7Pw-7f-5Yw"/>
+                            <constraint firstItem="sCm-yw-Jkc" firstAttribute="top" secondItem="Z07-Qx-jYY" secondAttribute="top" id="UFu-8L-IU9"/>
+                            <constraint firstItem="sCm-yw-Jkc" firstAttribute="leading" secondItem="Z07-Qx-jYY" secondAttribute="leading" id="YCn-oQ-FCg"/>
+                            <constraint firstItem="sCm-yw-Jkc" firstAttribute="bottom" secondItem="Z07-Qx-jYY" secondAttribute="bottom" id="uA7-Sw-Pqh"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Vocabulary" id="2Rf-0C-f4D"/>
                     <connections>
                         <outlet property="mySearchBar" destination="Oxp-B4-0T4" id="CUv-ue-IL3"/>
+                        <outlet property="tableView" destination="sCm-yw-Jkc" id="UTz-Xc-V2f"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DaA-IR-Zla" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -267,9 +298,15 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="tDd-HR-3gg"/>
+        <segue reference="tF4-Vy-970"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
